Add all tables to second page

--- a/tester.html
+++ b/tester.html
@@ -107,12 +107,9 @@
 
                         <span class="const-section-bottom">
                             <div>
-                                <!-- <div class="chart-wrapper">
-                                    <img class="chart-img" src="/assets/img/FingalNew12.svg" alt="">
-                                </div> -->
 
                                 <div class="chart-js-trial">
-                                    <canvas id="myChart1" style="background-color: rgb(241, 199, 247);"></canvas>
+                                    <canvas id="myChartdfing" style="background-color: rgb(241, 199, 247);"></canvas>
                                 </div>
 
                                 <table class="const-table-2">
@@ -1106,7 +1103,7 @@
                         <span class="const-section-bottom">
                             <div>
                                 <div class="chart-js-trial">
-                                    <canvas id="myChartdl" style="background-color: rgba(0, 0, 0, 0.5);"></canvas>
+                                    <canvas id="myChartdl" style="background-color: rgb(241, 199, 247);"></canvas>
                                 </div>
                                 <table class="const-table-2">
                                     <tr class="table-head-2">
@@ -1200,13 +1197,13 @@
         <!-- END BG DIV -->
     </div>
     <script>
-        var ctx = document.getElementById('myChart1').getContext('2d');
+        var ctx = document.getElementById('myChartdfing').getContext('2d');
         var myChart = new Chart(ctx, {
             type: 'bar',
             data: {
                 labels: ['SF', 'FF', 'FG', 'GP', 'LAB', 'I4C', 'SD', 'IND'],
                 datasets: [{
-                    label: '# of First Preference Votes',
+                    label: 'Percent of First Preference Votes',
                     data: [24.89, 21.49, 14.96, 13.24, 7.11, 3.99, 3.48, 9.01],
                     backgroundColor: [
                         'rgba(09, 53, 05, 1)',
@@ -1249,7 +1246,7 @@
             data: {
                 labels: ['SF', 'FG', 'FF', 'LAB', 'SD', 'GP', 'S-PBP', 'IND'],
                 datasets: [{
-                    label: '# of First Preference Votes',
+                    label: 'Percent of First Preference Votes',
                     data: [29.81, 18.76, 14.38, 11.35, 8.70, 7.04, 2.98, 5.61],
                     backgroundColor: [
                         'rgba(09, 53, 05, 1)',
@@ -1291,7 +1288,7 @@
             data: {
                 labels: ['FG', 'GP', 'SF', 'FF', 'LAB', 'SD', 'S-PBP', 'IND'],
                 datasets: [{
-                    label: '# of First Preference Votes',
+                    label: 'Percent of First Preference Votes',
                     data: [27.71, 22.45, 16.07, 13.83, 7.88, 4.55, 2.53, 4.98],
                     backgroundColor: [
                         'rgba(06, 02, 197, 1)',
@@ -1333,7 +1330,7 @@
             data: {
                 labels: ['SF', 'FG', 'GP', 'FF', 'SD', 'LAB', 'S-PBP', 'IND'],
                 datasets: [{
-                    label: '# of First Preference Votes',
+                    label: 'Percent of First Preference Votes',
                     data: [35.7, 15.11, 12.25, 10.27, 9.26, 5.41, 3.11, 7.04],
                     backgroundColor: [
                         'rgba(09, 53, 05, 1)',
@@ -1375,7 +1372,7 @@
             data: {
                 labels: ['SF', 'FG', 'FF', 'S-PBP', 'GP', 'LAB', 'IND'],
                 datasets: [{
-                    label: '# of First Preference Votes',
+                    label: 'Percent of First Preference Votes',
                     data: [42.82, 17.57, 12.32, 7.86, 6.13, 3.39, 9.91],
                     backgroundColor: [
                         'rgba(09, 53, 05, 1)',
@@ -1416,7 +1413,7 @@
             data: {
                 labels: ['SF', 'SD', 'FF', 'FG', 'GP', 'S-PBP', 'LAB', 'IND'],
                 datasets: [{
-                    label: '# of First Preference Votes',
+                    label: 'Percent of First Preference Votes',
                     data: [44.39, 18.91, 12.05, 11.05, 4.78, 3.75, 2.62, 2.44],
                     backgroundColor: [
                         'rgba(09, 53, 05, 1)',
@@ -1425,7 +1422,6 @@
                         'rgba(06, 02, 197, 1)',
                         'rgba(83, 151, 77, 1)',
                         'rgba(110, 46, 9, 1)',
-
                         'rgba(255, 0, 0, 1)',
                         'rgba(128, 128, 128, 1)'
                     ],
@@ -1457,25 +1453,29 @@
         var myChart = new Chart(ctx, {
             type: 'bar',
             data: {
-                labels: ['SF', 'FF', 'FF', 'GP', 'SD', 'S-PBP'],
+                labels: ['FG', 'GP', 'FF', 'SF', 'LAB', 'S-PBP', 'AON', 'IND'],
                 datasets: [{
-                    label: '# of First Preference Votes',
-                    data: [22, 10, 4, 5, 12, 3],
+                    label: 'Percent of First Preference Votes',
+                    data: [31.19, 21.13, 12.82, 11.62, 7.50, 3.53, 3.33, 8.88],
                     backgroundColor: [
-                        'rgba(255, 99, 132, 0.2)',
-                        'rgba(54, 162, 235, 0.2)',
-                        'rgba(255, 206, 86, 0.2)',
-                        'rgba(75, 192, 192, 0.2)',
-                        'rgba(153, 102, 255, 0.2)',
-                        'rgba(255, 159, 64, 0.2)'
+                        'rgba(06, 02, 197, 1)',
+                        'rgba(83, 151, 77, 1)',
+                        'rgba(26, 151, 22, 1)',
+                        'rgba(09, 53, 05, 1)',
+                        'rgba(255, 0, 0, 1)',
+                        'rgba(110, 46, 9, 1)',
+                        'rgba(255,69,0, 1)',
+                        'rgba(128, 128, 128, 1)'
                     ],
                     borderColor: [
-                        'rgba(255, 99, 132, 1)',
-                        'rgba(54, 162, 235, 1)',
-                        'rgba(255, 206, 86, 1)',
-                        'rgba(75, 192, 192, 1)',
-                        'rgba(153, 102, 255, 1)',
-                        'rgba(255, 159, 64, 1)'
+                        'rgba(0, 0, 0, 1)',
+                        'rgba(0, 0, 0, 1)',
+                        'rgba(0, 0, 0, 1)',
+                        'rgba(0, 0, 0, 1)',
+                        'rgba(0, 0, 0, 1)',
+                        'rgba(0, 0, 0, 1)',
+                        'rgba(0, 0, 0, 1)',
+                        'rgba(0, 0, 0, 1)'
                     ],
                     borderWidth: 1
                 }]
@@ -1495,25 +1495,29 @@
         var myChart = new Chart(ctx, {
             type: 'bar',
             data: {
-                labels: ['SF', 'FF', 'FF', 'GP', 'SD', 'S-PBP'],
+                labels: ['SF', 'FG', 'FF', 'S-PBP', 'GP', 'I4C', 'LAB', 'IND'],
                 datasets: [{
-                    label: '# of First Preference Votes',
-                    data: [22, 10, 4, 5, 12, 3],
+                    label: 'Percent of First Preference Votes',
+                    data: [39.3, 11.73, 11.05, 10.98, 9.33, 6.54, 4.84, 2.55],
                     backgroundColor: [
-                        'rgba(255, 99, 132, 0.2)',
-                        'rgba(54, 162, 235, 0.2)',
-                        'rgba(255, 206, 86, 0.2)',
-                        'rgba(75, 192, 192, 0.2)',
-                        'rgba(153, 102, 255, 0.2)',
-                        'rgba(255, 159, 64, 0.2)'
+                        'rgba(09, 53, 05, 1)',
+                        'rgba(06, 02, 197, 1)',
+                        'rgba(26, 151, 22, 1)',
+                        'rgba(110, 46, 9, 1)',
+                        'rgba(83, 151, 77, 1)',
+                        'rgba(209, 95, 212, 1)',
+                        'rgba(255, 0, 0, 1)',
+                        'rgba(128, 128, 128, 1)'
                     ],
                     borderColor: [
-                        'rgba(255, 99, 132, 1)',
-                        'rgba(54, 162, 235, 1)',
-                        'rgba(255, 206, 86, 1)',
-                        'rgba(75, 192, 192, 1)',
-                        'rgba(153, 102, 255, 1)',
-                        'rgba(255, 159, 64, 1)'
+                        'rgba(0, 0, 0, 1)',
+                        'rgba(0, 0, 0, 1)',
+                        'rgba(0, 0, 0, 1)',
+                        'rgba(0, 0, 0, 1)',
+                        'rgba(0, 0, 0, 1)',
+                        'rgba(0, 0, 0, 1)',
+                        'rgba(0, 0, 0, 1)',
+                        'rgba(0, 0, 0, 1)'
                     ],
                     borderWidth: 1
                 }]
@@ -1533,25 +1537,29 @@
         var myChart = new Chart(ctx, {
             type: 'bar',
             data: {
-                labels: ['SF', 'FF', 'FF', 'GP', 'SD', 'S-PBP'],
+                labels: ['SF', 'FF', 'FG', 'GP', 'S-PBP', 'LAB', 'SD', 'IND'],
                 datasets: [{
-                    label: '# of First Preference Votes',
-                    data: [22, 10, 4, 5, 12, 3],
+                    label: 'Percent of First Preference Votes',
+                    data: [29.72, 18.04, 16.84, 7.34, 6.63, 5.33, 4.09, 12.01],
                     backgroundColor: [
-                        'rgba(255, 99, 132, 0.2)',
-                        'rgba(54, 162, 235, 0.2)',
-                        'rgba(255, 206, 86, 0.2)',
-                        'rgba(75, 192, 192, 0.2)',
-                        'rgba(153, 102, 255, 0.2)',
-                        'rgba(255, 159, 64, 0.2)'
+                        'rgba(09, 53, 05, 1)',
+                        'rgba(26, 151, 22, 1)',
+                        'rgba(06, 02, 197, 1)',
+                        'rgba(83, 151, 77, 1)',
+                        'rgba(110, 46, 9, 1)',
+                        'rgba(255, 0, 0, 1)',
+                        'rgba(97, 1, 187, 1)',
+                        'rgba(128, 128, 128, 1)'
                     ],
                     borderColor: [
-                        'rgba(255, 99, 132, 1)',
-                        'rgba(54, 162, 235, 1)',
-                        'rgba(255, 206, 86, 1)',
-                        'rgba(75, 192, 192, 1)',
-                        'rgba(153, 102, 255, 1)',
-                        'rgba(255, 159, 64, 1)'
+                        'rgba(0, 0, 0, 1)',
+                        'rgba(0, 0, 0, 1)',
+                        'rgba(0, 0, 0, 1)',
+                        'rgba(0, 0, 0, 1)',
+                        'rgba(0, 0, 0, 1)',
+                        'rgba(0, 0, 0, 1)',
+                        'rgba(0, 0, 0, 1)',
+                        'rgba(0, 0, 0, 1)'
                     ],
                     borderWidth: 1
                 }]
@@ -1571,25 +1579,29 @@
         var myChart = new Chart(ctx, {
             type: 'bar',
             data: {
-                labels: ['SF', 'FF', 'FF', 'GP', 'SD', 'S-PBP'],
+                labels: ['SF', 'FG', 'FF', 'GP', 'S-PBP', 'LAB', 'AON', 'IND'],
                 datasets: [{
-                    label: '# of First Preference Votes',
-                    data: [22, 10, 4, 5, 12, 3],
+                    label: 'Percent of First Preference Votes',
+                    data: [28.55, 19.43, 15.8, 11.23, 9.98, 4.8, 2.43, 5.91],
                     backgroundColor: [
-                        'rgba(255, 99, 132, 0.2)',
-                        'rgba(54, 162, 235, 0.2)',
-                        'rgba(255, 206, 86, 0.2)',
-                        'rgba(75, 192, 192, 0.2)',
-                        'rgba(153, 102, 255, 0.2)',
-                        'rgba(255, 159, 64, 0.2)'
+                        'rgba(09, 53, 05, 1)',
+                        'rgba(06, 02, 197, 1)',
+                        'rgba(26, 151, 22, 1)',
+                        'rgba(83, 151, 77, 1)',
+                        'rgba(110, 46, 9, 1)',
+                        'rgba(255, 0, 0, 1)',
+                        'rgba(255,69,0, 1)',
+                        'rgba(128, 128, 128, 1)'
                     ],
                     borderColor: [
-                        'rgba(255, 99, 132, 1)',
-                        'rgba(54, 162, 235, 1)',
-                        'rgba(255, 206, 86, 1)',
-                        'rgba(75, 192, 192, 1)',
-                        'rgba(153, 102, 255, 1)',
-                        'rgba(255, 159, 64, 1)'
+                        'rgba(0, 0, 0, 1)',
+                        'rgba(0, 0, 0, 1)',
+                        'rgba(0, 0, 0, 1)',
+                        'rgba(0, 0, 0, 1)',
+                        'rgba(0, 0, 0, 1)',
+                        'rgba(0, 0, 0, 1)',
+                        'rgba(0, 0, 0, 1)',
+                        'rgba(0, 0, 0, 1)'
                     ],
                     borderWidth: 1
                 }]
@@ -1609,25 +1621,29 @@
         var myChart = new Chart(ctx, {
             type: 'bar',
             data: {
-                labels: ['SF', 'FF', 'FF', 'GP', 'SD', 'S-PBP'],
+                labels: ['FG', 'FF', 'S-PBP', 'GP', 'SF', 'LAB', 'SD', 'IND'],
                 datasets: [{
-                    label: '# of First Preference Votes',
-                    data: [22, 10, 14, 2, 2, 6],
+                    label: 'Percent of First Preference Votes',
+                    data: [33.44, 15.91, 15.46, 14.93, 9.64, 4.83, 2.22, 1.67],
                     backgroundColor: [
-                        'rgba(255, 99, 132, 0.2)',
-                        'rgba(54, 162, 235, 0.2)',
-                        'rgba(255, 206, 86, 0.2)',
-                        'rgba(75, 192, 192, 0.2)',
-                        'rgba(153, 102, 255, 0.2)',
-                        'rgba(255, 159, 64, 0.2)'
+                        'rgba(06, 02, 197, 1)',
+                        'rgba(26, 151, 22, 1)',
+                        'rgba(110, 46, 9, 1)',
+                        'rgba(83, 151, 77, 1)',
+                        'rgba(09, 53, 05, 1)',
+                        'rgba(255, 0, 0, 1)',
+                        'rgba(97, 1, 187, 1)',
+                        'rgba(128, 128, 128, 1)'
                     ],
                     borderColor: [
-                        'rgba(255, 99, 132, 1)',
-                        'rgba(54, 162, 235, 1)',
-                        'rgba(255, 206, 86, 1)',
-                        'rgba(75, 192, 192, 1)',
-                        'rgba(153, 102, 255, 1)',
-                        'rgba(255, 159, 64, 1)'
+                        'rgba(0, 0, 0, 1)',
+                        'rgba(0, 0, 0, 1)',
+                        'rgba(0, 0, 0, 1)',
+                        'rgba(0, 0, 0, 1)',
+                        'rgba(0, 0, 0, 1)',
+                        'rgba(0, 0, 0, 1)',
+                        'rgba(0, 0, 0, 1)',
+                        'rgba(0, 0, 0, 1)'
                     ],
                     borderWidth: 1
                 }]
