--- a/tester.html
+++ b/tester.html
@@ -129,12 +129,14 @@
                                     </tr>
 
                                     <table class="const-table">
-                                        <tr class="table-head">
-                                            <th>Party</th>
-                                            <th>FPV</th>
-                                            <th>Seats</th>
-                                            <th>Change</th>
-                                        </tr>
+                                        <thead>
+                                            <tr class="table-head">
+                                                <th>Party</th>
+                                                <th>FPV</th>
+                                                <th>Seats</th>
+                                                <th>Change</th>
+                                            </tr>
+                                        </thead>
                                         <tr>
                                             <td>Sinn Fein</td>
                                             <td>15,792</td>
@@ -237,12 +239,14 @@
                                     </tr>
 
                                     <table class="const-table">
-                                        <tr class="table-head">
-                                            <th>Party</th>
-                                            <th>FPV</th>
-                                            <th>Seats</th>
-                                            <th>Change</th>
-                                        </tr>
+                                        <thead>
+                                            <tr class="table-head">
+                                                <th>Party</th>
+                                                <th>FPV</th>
+                                                <th>Seats</th>
+                                                <th>Change</th>
+                                            </tr>
+                                        </thead>
                                         <tr>
                                             <td>Sinn Fein</td>
                                             <td>21,344</td>
@@ -323,13 +327,14 @@
                                     <canvas id="myChartdbs" style="background-color: rgb(241, 199, 247);"></canvas>
                                 </div>
                                 <table class="const-table-2">
-                                    <tr class="table-head-2">
-                                        <th>GP</th>
-                                        <th>SF</th>
-                                        <th>FF</th>
-                                        <th>FG</th>
-
-                                    </tr>
+                                    <thead>
+                                        <tr class="table-head-2">
+                                            <th>GP</th>
+                                            <th>SF</th>
+                                            <th>FF</th>
+                                            <th>FG</th>
+                                        </tr>
+                                    </thead>
                                     <tr>
                                         <td class="gp-color-box">1</td>
                                         <td class="sf-color-box">2</td>
@@ -339,12 +344,14 @@
                                     </tr>
 
                                     <table class="const-table">
-                                        <tr class="table-head">
-                                            <th>Party</th>
-                                            <th>FPV</th>
-                                            <th>Seats</th>
-                                            <th>Change</th>
-                                        </tr>
+                                        <thead>
+                                            <tr class="table-head">
+                                                <th>Party</th>
+                                                <th>FPV</th>
+                                                <th>Seats</th>
+                                                <th>Change</th>
+                                            </tr>
+                                        </thead>
                                         <tr>
                                             <td>Fine Gael</td>
                                             <td>10,970</td>
@@ -424,13 +431,15 @@
                                 </div>
 
                                 <table class="const-table-2">
-                                    <tr class="table-head-2">
-                                        <th>SF</th>
-                                        <th>FG</th>
-                                        <th>GP</th>
-                                        <th>SD</th>
+                                    <thead>
+                                        <tr class="table-head-2">
+                                            <th>SF</th>
+                                            <th>FG</th>
+                                            <th>GP</th>
+                                            <th>SD</th>
 
-                                    </tr>
+                                        </tr>
+                                    </thead>
                                     <tr>
                                         <td class="sf-color-box">1</td>
                                         <td class="fg-color-box">2</td>
@@ -440,12 +449,14 @@
                                     </tr>
 
                                     <table class="const-table">
-                                        <tr class="table-head">
-                                            <th>Party</th>
-                                            <th>FPV</th>
-                                            <th>Seats</th>
-                                            <th>Change</th>
-                                        </tr>
+                                        <thead>
+                                            <tr class="table-head">
+                                                <th>Party</th>
+                                                <th>FPV</th>
+                                                <th>Seats</th>
+                                                <th>Change</th>
+                                            </tr>
+                                        </thead>
                                         <tr>
                                             <td>Sinn Fein</td>
                                             <td>11,223</td>
